--- a/Starter/templates/admin_dashboard.html
+++ b/Starter/templates/admin_dashboard.html
@@ -69,7 +69,7 @@
                     <td class="py-2 px-4 text-sm text-gray-600">{{ subscriber.email }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{subscriber.created_at}}</td>
                     <td class="py-2 px-4 text-sm flex gap-4 flex-row">
-                        <form action="{{ url_for('views.get_subscriber', id=subscriber.id) }}" method="GET">
+                        <form action="{{ url_for('views.edit_subscriber', id=subscriber.id) }}" method="GET">
                             <button type="submit" class="btn btn-primary w-1/2"><img src="../static/icon/pencil.svg"
                                     alt="" srcset=""></button>
                         </form>
