--- a/api/templates/blog.html
+++ b/api/templates/blog.html
@@ -3,33 +3,22 @@
 {% endblock %}
 {% block content %}
 
-<!--Banner component -->
-<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
-    style="background-image: url(../static/images/family.webp)">
-    <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        
-        <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-[#d13642] ">Blog</h1>
-        <p class="text-md bell font-bold sm:text-xl md:text-2xl text-center text-red-600">
-            Check on our articles where we worked tremendously
-        </p>
+<!-- hero section -->
+<div class="relative w-full md:-mt-16  h-[320px] md:h-[400px] text-white" id="home">
+    <div class="absolute inset-0 opacity-90">
+        <img src="../static/images/family.webp" alt="Background Image"
+            class="object-cover object-center w-full h-full" />
 
-        <!-- SVG Container -->
-        <div class="container mt-4 mx-auto max-w-7xl flex justify-center">
-            <svg fill="#000000" width="50px" height="50px" viewBox="0 0 24 24" id="down-arrow-circle"
-                data-name="Flat Color" xmlns="http://www.w3.org/2000/svg"
-                class="icon-container icon flat-color animate-bounce w-12 h-12" onclick="scrollToSection()">
-                <circle id="primary" cx="12" cy="12" r="10" style="fill: rgb(0, 0, 0);"></circle>
-                <path id="secondary"
-                    d="M14.14,13H13V7a1,1,0,0,0-2,0v6H9.86a1,1,0,0,0-.69,1.5l2.14,3.12a.82.82,0,0,0,1.38,0l2.14-3.12A1,1,0,0,0,14.14,13Z"
-                    style="fill: rgb(44, 169, 188);">
-                    Contact us
-                </path>
-
-            </svg>
+    </div>
+    <div class="absolute inset-9 flex flex-col md:flex-row items-center justify-between mx-auto max-w-7xl">
+        <div class="md:w-1/2 mb-4 md:mb-0">
+            <h1 class="text-grey-700 font-medium text-4xl md:text-5xl leading-tight mb-2">Blog
+            </h1>
+            <p class="font-regular text-xl mb-8 mt-4">Check on our articles where we worked tremendously</p>
+            <a href="{{ url_for('pages.contact_us') }}"
+                class="px-6 py-3 bg-[#801616] text-white font-medium rounded-full hover:bg-[#c09858]  transition duration-200">Contact
+                Us</a>
         </div>
-        <!-- </button> -->
-
-
     </div>
 </div>
 
@@ -43,6 +32,18 @@
 </section>
 
 
+<script>
+    const socket = io();
+
+    // Request all articles for the blog page
+    socket.emit('get_all_articles');
+
+    // Listen for the initial data (all articles)
+    socket.on('initial_data_blog', (data) => {
+        displayArticles(data);
+    });
+    
+</script>
 
 
 
