--- a/api/templates/layout.html
+++ b/api/templates/layout.html
@@ -52,10 +52,11 @@
     <!-- End Google Tag Manager -->
 </head>
 
-<body class="overflow-x-hidden font-extrabold font-bellmt line-space banner-text" style="background-color: rgb(244, 249, 252)">
+<body class="overflow-x-hidden font-extrabold font-bellmt line-space banner-text"
+    style="background-color: rgb(244, 249, 252)">
 
     <first-navbar>
-        <div class="mx-auto bg-white">
+        <div class="mx-auto bg-white pb-2">
             <div class="flex flex-col md:flex-row items-center gap-4 pb-1.5 justify-between max-w-7xl  mx-auto ">
                 <!-- Logo Section -->
                 <div class="svg-container">
@@ -96,12 +97,12 @@
 
     <!--Second Navbar  -->
     <second-navbar>
-        <div class="mx-auto max-w-7xl p-1 sticky top-0 rounded-md inset-x-0 z-[9999] w-full bg-purple-100 opacity-90">
+        <div class="mx-auto max-w-7xl p-1.5 sticky top-0 rounded-md inset-x-0 z-[9999] w-full bg-purple-100 opacity-90">
             <nav
-                class="flex flex-wrap items-center max-w-xl sm:max-w-7xl mx-auto justify-between z-[9999] space-y-4 md:space-y-0">
+                class="flex flex-wrap items-center  mx-auto justify-between space-y-4 md:space-y-0">
                 <!-- Hamburger Menu Button -->
                 <div class="flex md:hidden">
-                    <button id="hamburger" class="relative z-30">
+                    <button id="hamburger" class="relative ">
                         <img class="hamburger-icon toggle block"
                             src="https://img.icons8.com/fluent-systems-regular/2x/menu-squared-2.png" width="48"
                             height="48" />
@@ -122,9 +123,11 @@
                         <button class="flex items-center ml-20 md:ml-0 uppercase hover:text-[#d13642] relative z-30">
                             Areas Of Practice
                             <span class="ml-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="#CB4154" viewBox="0 0 24 24" stroke-width="1.5"
-                                    stroke="currentColor" class="w-5 h-4 transition-transform group-hover:rotate-90">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="#CB4154" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor"
+                                    class="w-5 h-4 transition-transform group-hover:rotate-90">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="m8.25 4.5 7.5 7.5-7.5 7.5" />
                                 </svg>
                             </span>
                         </button>
@@ -321,7 +324,7 @@
     {% endif %}
     {% endwith %}
     {% block content %} {% endblock %}
-<!-- whatsapp chat -->
+    <!-- whatsapp chat -->
     <div class="fixed bottom-4 left-4 z-50 animate-bounce">
         <a href="https://wa.me/254727464224" target="_blank" class="block">
             <svg class="w-8 h-8 md:w-12 md:h-12" fill="none" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
@@ -331,10 +334,10 @@
         </a>
     </div>
 
-    
 
 
-    
+
+
     <!-- footer modal confirm -->
     <div id="modelConfirm"
         class="fixed hidden z-50 inset-0 md:mt-16 bg-transparent bg-opacity-10 overflow-y-auto h-full w-full px-4 ">
@@ -380,13 +383,13 @@
 
 
     <!-- footer -->
-    <section class="  sticky h-screen  top-0  z-40 bg-slate-100 ">
+    <section class="  sticky h-screen  top-0  z-40  " >
         <!-- #020d1f -->
-        <footer class="">
+        <footer class="" data-aos="fade-up" data-aos-duration="1000">
 
             <div class=" mx-auto p-0 md:p-8 xl:px-0  ">
-                <div class="mx-auto max-w-8xl px-6 pb-10 pt-16 rounded-lg lg:mt-28 shadow-lg opacity-50 hover:shadow-xl 5"
-                    style="background-color: #150233;" data-aos="fade-up" data-aos-duration="1000">
+                <div class="mx-auto max-w-8xl px-6 pb-10 pt-16 rounded-lg lg:mt-28 shadow-lg opacity-90 hover:shadow-xl 5"
+                    style="background-color: #150233;" >
                     <button class="bg-red-700 text-white rounded-t-md px-4 py-2  hover:bg-rose-700 transition"
                         onclick="openModal('modelConfirm')">
                         Terms & Conditions
@@ -670,21 +673,9 @@
         </footer>
     </section>
 
+
     <script>
-        const socket = io();
 
-        // Load articles on connection
-        socket.on('initial_data', (data) => {
-            displayArticles(data);
-        });
-
-        // Listen for updates
-        socket.on('update_featured', ({ type, data }) => {
-            const updatedSection = { [type]: data };
-            displayArticles(updatedSection, true); // Partial update
-        });
-
-   
         function renderMedia(link) {
             const youtubeMatch = link.match(/(?:https?:\/\/)?(?:www\.)?youtube\.com\/watch\?v=([\w-]+)/) ||
                 link.match(/(?:https?:\/\/)?youtu\.be\/([\w-]+)/);
@@ -751,7 +742,7 @@
         }
 
 
-       
+
 
         async function toggleFeatured(type, index, isFeatured) {
             try {
@@ -816,8 +807,6 @@
             }
         });
     </script>
-
-    
     <script src="../static/js/hamburger.js"></script>/
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
