--- a/api/templates/legal.html
+++ b/api/templates/legal.html
@@ -3,41 +3,32 @@
 {% endblock %}
 
 {% block content %}
-<!--Banner component -->
-<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
-    style="background-image: url(../static/images/legal-top.webp)">
-    <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <h1 class="text-center   bell-extrabold     text-white ">Legal Speak</h1>
-        <p class="bell-bold text-center">
-            Discover our commitment to excellence and client satisfaction.
-        </p>
 
-        <!-- SVG Container -->
-        <div class="container mt-4 mx-auto max-w-7xl flex justify-center">
-            <svg fill="#000000" width="50px" height="50px" viewBox="0 0 24 24" id="down-arrow-circle"
-                data-name="Flat Color" xmlns="http://www.w3.org/2000/svg"
-                class="icon-container icon flat-color animate-bounce w-12 h-12" onclick="scrollToSection()">
-                <circle id="primary" cx="12" cy="12" r="10" style="fill: rgb(0, 0, 0);"></circle>
-                <path id="secondary"
-                    d="M14.14,13H13V7a1,1,0,0,0-2,0v6H9.86a1,1,0,0,0-.69,1.5l2.14,3.12a.82.82,0,0,0,1.38,0l2.14-3.12A1,1,0,0,0,14.14,13Z"
-                    style="fill: rgb(44, 169, 188);">
-                    Contact us
-                </path>
+<!-- hero section -->
+<div class="relative w-full md:-mt-16  h-[320px] md:h-[400px] text-white" id="home">
+    <div class="absolute inset-0 opacity-90">
+        <img src="../static/images/legal-top.webp" alt="Background Image"
+            class="object-cover object-center w-full h-full" />
 
-            </svg>
+    </div>
+    <div class="absolute inset-9 flex flex-col md:flex-row items-center justify-between mx-auto max-w-7xl">
+        <div class="md:w-1/2 mb-4 md:mb-0">
+            <h1 class="text-grey-700 font-medium text-4xl md:text-5xl leading-tight mb-2">Legal Speak
+            </h1>
+            <p class="font-regular text-xl mb-8 mt-4">Discover our commitment to excellence and client satisfaction.</p>
+            <a href="{{ url_for('pages.contact_us') }}"
+                class="px-6 py-3 bg-[#801616] text-white font-medium rounded-full hover:bg-[#c09858]  transition duration-200">Contact
+                Us</a>
         </div>
-        <!-- </button> -->
-
-
     </div>
 </div>
 
 
 
 <!-- legal section -->
-<div class="pt-10 pb-10 " style="background-color: rgb(244, 249, 252)">
+<div class="pt-10 pb-10 " style="background-color: #FFFFFF">
     <div class="py-10 ">
-        <div
+        <div   data-aos="fade-up" data-aos-duration="1000"
             class="max-w-md mx-auto xl:max-w-5xl font-poppins-b lg:max-w-5xl md:max-w-2xl bg-gray-700 max-h-screen shadow-2xl flex-row rounded relative">
             <div class="p-2 bg-blue-900  rounded-t-lg">
                 <h5 class="text-white text-2xl capitalize font-extrabold bell-bold">Legal Speak</h5>
@@ -61,7 +52,7 @@
 </div>
 
 <!-- Terms -->
-<section data-aos="fade-up" data-aos-duration="1000" class="py-10 bg-white sm:py-16 lg:py-24">
+<section data-aos="fade-up" data-aos-duration="1000"  class="py-10  sm:py-16 lg:py-24">
     <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
         <div class="max-w-2xl mx-auto text-center">
             <h2 class="bell-extrabold leading-tight text-black ">
@@ -163,14 +154,36 @@
     </script>
 </section>
 
+<!-- featured articles section -->
+<section class="z-20  " style="background-color: #FFFFFF">
+    <div class=" mt-1  py-8   w-full mx-auto max-w-7xl " data-aos="fade-up" data-aos-duration="1000">
+        <div class="flex justify-between items-center mb-4">
+            <!-- Title Section -->
+            <h2 class="w-fit font-bellmt-bold bell-bolder font-bold text-[#d13642] pb-1 px-2 rounded-md border-b-2 border-red-800 text-center md:text-left">
+                Featured
+                <span class="text-indigo-900">Articles</span>
+            </h2>
+        
+            <!-- Button Section -->
+            <a href="{{ url_for('blogs.blog') }}" class="">
+                <button class="px-3 py-2 text-red-700 hover:bg-red-700 hover:text-white border border-red-800 rounded-lg font-bellmt">View All <span class="ml-1">&#8594;</span></button>
+            </a>
+        </div>
+
+        <div class=" mt-1  py-8   w-full  ">
+            <div id="featured-articles" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 h-fit">
+                <!-- Dynamic content will be injected here -->
+            </div>
+        </div>
+    </div>
+</section>
+<script>
+    const socket = io();
+    // Load the latest two articles for the home page
+    socket.on('initial_data_home', (data) => {
+        displayArticles(data);
+    });        
+</script>
 
 
-
-
-
-
-
-
-
-
-    {% endblock %}
+{% endblock %}
